<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>dev.pjatk</groupId>
	<artifactId>recipe-app</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>recipe-app</name>
	<description>Recipe app for bachelors degree project</description>
	
	<properties>
		<java.version>21</java.version>
	  <node.version>v20.12.2</node.version>
	  <npm.version>10.5.0</npm.version>
	</properties>

	<dependencies>
  		<dependency>
  			<groupId>org.springframework.boot</groupId>
  			<artifactId>spring-boot-starter-actuator</artifactId>
  		</dependency>
  		<dependency>
  			<groupId>org.springframework.boot</groupId>
  			<artifactId>spring-boot-starter-data-jpa</artifactId>
  		</dependency>
  		<dependency>
  			<groupId>org.springframework.boot</groupId>
  			<artifactId>spring-boot-starter-data-redis</artifactId>
  		</dependency>
  		<dependency>
  			<groupId>org.springframework.boot</groupId>
  			<artifactId>spring-boot-starter-security</artifactId>
  		</dependency>
  		<dependency>
  			<groupId>org.springframework.boot</groupId>
  			<artifactId>spring-boot-starter-validation</artifactId>
  		</dependency>
  		<dependency>
  			<groupId>org.springframework.boot</groupId>
  			<artifactId>spring-boot-starter-web</artifactId>
  		</dependency>
  		<dependency>
  			<groupId>org.liquibase</groupId>
  			<artifactId>liquibase-core</artifactId>
  		</dependency>
  		<dependency>
  			<groupId>org.springframework.session</groupId>
  			<artifactId>spring-session-data-redis</artifactId>
  		</dependency>
  		<dependency>
  			<groupId>org.springframework.boot</groupId>
  			<artifactId>spring-boot-devtools</artifactId>
  			<scope>runtime</scope>
  			<optional>true</optional>
  		</dependency>
  		<dependency>
  			<groupId>org.springframework.boot</groupId>
  			<artifactId>spring-boot-docker-compose</artifactId>
  			<scope>runtime</scope>
  			<optional>true</optional>
  		</dependency>
  		<dependency>
  			<groupId>org.postgresql</groupId>
  			<artifactId>postgresql</artifactId>
  			<scope>runtime</scope>
  		</dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
        </dependency>
  		<dependency>
  			<groupId>org.springframework.boot</groupId>
  			<artifactId>spring-boot-configuration-processor</artifactId>
  			<optional>true</optional>
  		</dependency>
  		<dependency>
  			<groupId>org.projectlombok</groupId>
  			<artifactId>lombok</artifactId>
  			<optional>true</optional>
  		</dependency>
  		<dependency>
  			<groupId>org.springframework.boot</groupId>
  			<artifactId>spring-boot-starter-test</artifactId>
  			<exclusions>
  			<!-- Exclude JUnit 4, not needed -->
          <exclusion>
              <groupId>org.junit.vintage</groupId>
              <artifactId>junit-vintage-engine</artifactId>
          </exclusion>
        </exclusions>
  			<scope>test</scope>
  		</dependency>
  		<dependency>
  			<groupId>org.springframework.boot</groupId>
  			<artifactId>spring-boot-testcontainers</artifactId>
  			<scope>test</scope>
  		</dependency>
  		<dependency>
  			<groupId>org.springframework.restdocs</groupId>
  			<artifactId>spring-restdocs-mockmvc</artifactId>
  			<scope>test</scope>
  		</dependency>
  		<dependency>
  			<groupId>org.springframework.security</groupId>
  			<artifactId>spring-security-test</artifactId>
  			<scope>test</scope>
  		</dependency>
  		<dependency>
  			<groupId>org.testcontainers</groupId>
  			<artifactId>junit-jupiter</artifactId>
  			<scope>test</scope>
  		</dependency>
  		<dependency>
  			<groupId>org.testcontainers</groupId>
  			<artifactId>postgresql</artifactId>
  			<scope>test</scope>
  		</dependency>
  		<dependency>
          <groupId>com.nulab-inc</groupId>
          <artifactId>zxcvbn</artifactId>
          <version>1.9.0</version>
        </dependency>
  	</dependencies>
  	<build>
  		<plugins>
  			<plugin>
  				<groupId>org.asciidoctor</groupId>
  				<artifactId>asciidoctor-maven-plugin</artifactId>
  				<version>2.2.1</version>
  				<executions>
  					<execution>
  						<id>generate-docs</id>
  						<phase>prepare-package</phase>
  						<goals>
  							<goal>process-asciidoc</goal>
  						</goals>
  						<configuration>
  							<backend>html</backend>
  							<doctype>book</doctype>
  						</configuration>
  					</execution>
  				</executions>
  				<dependencies>
  					<dependency>
  						<groupId>org.springframework.restdocs</groupId>
  						<artifactId>spring-restdocs-asciidoctor</artifactId>
  						<version>${spring-restdocs.version}</version>
  					</dependency>
  				</dependencies>
  			</plugin>
  			<plugin>
  				<groupId>org.springframework.boot</groupId>
  				<artifactId>spring-boot-maven-plugin</artifactId>
  				<configuration>
  					<excludes>
  						<exclude>
  							<groupId>org.projectlombok</groupId>
  							<artifactId>lombok</artifactId>
  						</exclude>
  					</excludes>
  				</configuration>
  			</plugin>
  			<plugin>
                <groupId>com.github.eirslett</groupId>
                <artifactId>frontend-maven-plugin</artifactId>
                <version>1.15.0</version>
                <configuration>
                    <!--  Be cautious: Must point to path of directory containing package.json  -->
                    <workingDirectory>src/frontend</workingDirectory>
                    <nodeVersion>${node.version}</nodeVersion>
                    <npmVersion>${npm.version}</npmVersion>
                </configuration>
                <executions>
                    <execution>
                        <id>Install node and npm</id>
                        <goals>
                            <goal>install-node-and-npm</goal>
                        </goals>
                        <phase>generate-resources</phase>
                        <configuration>
                            <nodeVersion>${node.version}</nodeVersion>
                            <npmVersion>${npm.version}</npmVersion>
                        </configuration>
                    </execution>
                    <execution>
                        <id>Run npm install</id>
                        <goals>
                            <goal>npm</goal>
                        </goals>
                        <phase>generate-resources</phase>
                        <configuration>
                            <arguments>install</arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>Run frontend tests</id>
                        <goals>
                            <goal>npm</goal>
                        </goals>
                        <phase>test</phase>
                        <configuration>
                            <skip>${skipTests}</skip>
                            <arguments>test</arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>Run npm run build</id>
                        <goals>
                            <goal>npm</goal>
                        </goals>
                        <phase>generate-resources</phase>
                        <configuration>
                            <arguments>run build</arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <executions>
              <execution>
                  <id>Copy Angular frontend into Spring Boot target static folder</id>
                  <phase>process-resources</phase>
                  <goals>
                      <goal>copy-resources</goal>
                  </goals>
                  <configuration>
                      <outputDirectory>target/classes/static</outputDirectory>
                      <resources>
                          <resource>
                              <directory>src/frontend/dist/frontend/browser</directory>
                              <filtering>true</filtering>
                          </resource>
                      </resources>
                  </configuration>
              </execution>
          </executions>
        </plugin>
  		</plugins>
  	</build>
</project>
